--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^5.6.9
   google_sign_in: ^6.2.1
   intl: ^0.19.0
+  google_generative_ai: ^0.4.0
 
 dev_dependencies:
   flutter_test:
