--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   intl: ^0.19.0
   google_generative_ai: ^0.4.0
   flutter_dotenv: ^5.2.1
+  flutter_markdown: ^0.7.3
+  fl_chart: ^0.69.0
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
