--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,15 @@
 {
   "projects": {
     "default": "habitslogger"
-  }
+  },
+  "targets": {
+    "habitslogger": {
+      "hosting": {
+        "app": [
+          "daycoach"
+        ]
+      }
+    }
+  },
+  "etags": {}
 }
